<resources>
    <string name="callFailed_dialToUssd">DIAL request modified to USSD request.</string>
    <string name="callFailed_dialToSs">DIAL request modified to SS request.</string>
    <string name="callFailed_dialToDial">DIAL request modified to DIAL with different number.</string>
    <string name="to_hint">To</string>
    <string name="dialpad_0_number">0</string>
    <string name="dialpad_1_number">1</string>
    <string name="dialpad_2_number">2</string>
    <string name="dialpad_3_number">3</string>
    <string name="dialpad_4_number">4</string>
    <string name="dialpad_5_number">5</string>
    <string name="dialpad_6_number">6</string>
    <string name="dialpad_7_number">7</string>
    <string name="dialpad_8_number">8</string>
    <string name="dialpad_9_number">9</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">\#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters" />
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters" />
    <string name="dialpad_pound_letters" />
    <string name="description_dialpad_overflow">More options</string>
    <string name="description_delete_button">backspace</string>
    <string name="description_image_button_plus">plus</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="default_notification_description">Default sound (%1$s)</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Mobile network not available</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">"You can't make outgoing calls while call barring is on."</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="incall_error_missing_voicemail_number">Voicemail number unknown.</string>
    <string name="local_storage_account">Local phone account</string>
    <string name="import_contacts_sim">Import contacts from SIM?</string>
    <string name="import_contacts_sim_confirm">Import</string>
    <string name="import_contacts_sim_cancel">Cancel</string>
    <string name="manage_sim_contacts">Manage SIM card contacts</string>
    <string name="export_to_sim">Export to SIM card</string>
    <string name="fail_reason_import_vcard">"I/O error,couldn't import vCard %s"</string>
    <string name="share_failed">Too many contacts, share failed</string>
    <string name="label_groups">Group</string>
    <string name="exporting">Exporting</string>
    <string name="reading_vcard_files">%1$s of %2$s files</string>
    <string name="progressdialog_cancel">Cancel</string>
    <string name="export_failed">Export failed</string>
    <string name="sim_card_full">Error, Sim Card is full.</string>
    <string name="export_finished">Export finished</string>
    <string name="tag_too_long">Error, Contact name is too long.</string>
    <string name="menu_search">Search</string>
    <string name="pref_quickmessage">QuickMessage and Reply</string>
    <string name="pref_quickmessage_title">Show QuickMessage</string>
    <string name="pref_quickmessage_summary">Display the QuickMessage pop-up for incoming SMS messages</string>
    <string name="pref_wake_unlock_title">Wake and unlock</string>
    <string name="pref_wake_unlock_summary">Wake and unlock device on incoming message (insecure lock screens only)</string>
    <string name="pref_close_all_title">Close all</string>
    <string name="pref_close_all_summary">Close button closes all messages</string>
    <string name="pref_dark_theme_title">Use dark theme</string>
    <string name="pref_dark_theme_summary">"If not selected, the default 'light' theme will be used"</string>
    <string name="pref_title_send_delay">Delivery delay</string>
    <string name="pref_extra_settings">Extra settings</string>
    <string name="blacklist_title">Blacklist</string>
    <string name="message_share">Share</string>
    <string name="cancel_downloading">Cancel</string>
    <string name="pref_title_manage_sim_messages_slot1">Manage SIM1 card messages</string>
    <string name="pref_title_manage_sim_messages_slot2">Manage SIM2 card messages</string>
    <string name="pref_title_sms_delivery_reports_slot1">Delivery reports for SIM1</string>
    <string name="pref_title_sms_delivery_reports_slot2">Delivery reports for SIM2</string>
    <string name="pref_summary_message_template">Edit message template</string>
    <string name="pref_title_message_template">Message template</string>
    <string name="pref_sms_signature_title">SMS signature</string>
    <string name="pref_title_enable_signature">SMS signature</string>
    <string name="pref_summary_enable_signature">SMS signature enabled</string>
    <string name="pref_summary_disable_signature">SMS signature disabled</string>
    <string name="pref_title_edit_signature">Edit SMS signature</string>
    <string name="menu_copy_to">Copy</string>
    <string name="operation_to_card_memory">Copy message to SIM card</string>
    <string name="pref_smsc_title">SMSC Setings</string>
    <string name="search_bar_hint">Search contacts</string>
    <string name="select_all">All</string>
    <string name="pref_wap_push_title">Auto Push Service Message Setting</string>
    <string name="pref_title_wap_push_enabled">Enable WAP PUSH Service</string>
    <string name="pref_summary_wap_push_enabled">Enable to receive service message</string>
    <string name="memory_status_title">Memory status</string>
    <string name="pref_title_sms_validity_period">SMS Validity Period</string>
    <string name="pref_title_sms_validity_period_slot1">SMS validity period for SIM1</string>
    <string name="pref_title_sms_validity_period_slot2">SMS validity period for SIM2</string>
    <string name="menu_reply">Reply</string>
    <string name="menu_delete_msg">Delete</string>
    <string name="message_detail">Message detail</string>
    <string name="change_to_folder_mode">Change to folder mode</string>
    <string name="change_to_conversation_mode">Change to conversation mode</string>
    <string name="pref_title_mms_save_time">MMS Validity period</string>
    <string name="pref_title_mms_save_time_slot1">MMS validity period for SIM1</string>
    <string name="pref_title_mms_save_time_slot2">MMS validity period for SIM2</string>
    <string name="selected_all">Select all</string>
    <string name="default_cdma_priority">0</string>
    <string name="pref_title_cdma_priority">Message priority</string>
    <string name="pref_summary_cdma_priority">Priority of CDMA message</string>
    <string name="prefDialogTitle_cdma_priority">Priority</string>
    <string name="pref_title_sms_store">Preferred storage</string>
    <string name="pref_title_sms_store_card1">Preferred storage for SIM1</string>
    <string name="pref_title_sms_store_card2">Preferred storage for SIM2</string>
    <string name="manage_sdcard_messages">Manage sdcard messages</string>
    <string name="def_sms_store_value">0</string>
    <string name="def_sms_store_card1_value">0</string>
    <string name="def_sms_store_card2_value">0</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_delete_all">Delete all threads</string>
    <string name="menu_debug_dump">DEBUG DUMP</string>
    <string name="menu_cell_broadcasts">Cell broadcasts</string>
    <string name="view_delivery_report">View report</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="pref_notification_settings_title">Notifications</string>
    <string name="pref_mms_settings_title">Multimedia (MMS) messages</string>
    <string name="pref_sms_settings_title">Text (SMS) messages</string>
    <string name="pref_sms_storage_title">Storage</string>
    <string name="pref_title_sms_disabled">SMS Disabled</string>
    <string name="pref_summary_sms_disabled">Touch to make Messaging your default SMS app</string>
    <string name="pref_title_sms_enabled">SMS Enabled</string>
    <string name="pref_summary_sms_enabled">Touch to change your default SMS app</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit">%1$s messages per conversation</string>
    <string name="pref_summary_mms_group_mms">Use MMS to send a single message when there are multiple recipients</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_group_mms">Group messaging</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_title_notification_ringtone">Sound</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="menu_lock">Lock</string>
    <string name="sim_copy_to_phone_memory">Copy to phone memory</string>
    <string name="copy_to_sdcard">Save attachment</string>
</resources>