<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_search_white" android:id="@id/search" android:title="@string/menu_search" android:showAsAction="collapseActionView|ifRoom" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/action_settings" android:title="@string/menu_preferences" />
    <item android:id="@id/action_change_to_folder_mode" android:title="@string/change_to_folder_mode" />
    <item android:id="@id/action_change_to_conversation_mode" android:title="@string/change_to_conversation_mode" />
    <item android:id="@id/action_memory_status" android:title="@string/memory_status_title" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/action_delete_all" android:title="@string/menu_delete_all" />
    <item android:id="@id/action_cell_broadcasts" android:title="@string/menu_cell_broadcasts" />
    <item android:id="@id/action_debug_dump" android:title="@string/menu_debug_dump" />
</menu>