<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/mms_download_controls" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:layout_gravity="center_vertical" android:id="@id/btn_download_msg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/download" />
    <Button android:layout_gravity="center_vertical" android:id="@id/btn_cancel_download" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_downloading" />
    <TextView android:gravity="center" android:id="@id/label_downloading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/downloading" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" />
</LinearLayout>