<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/search_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/ButtonBar">
        <EditText android:ellipsize="end" android:id="@id/search_field" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/search_bar_hint" android:singleLine="true" android:freezesText="true" android:layout_weight="1.0" android:inputType="textNoSuggestions" android:imeOptions="actionDone" android:drawableStart="@drawable/magnifying_glass" android:layout_marginStart="5.0dip" android:layout_marginEnd="5.0dip" />
        <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/select_all_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_all" android:singleLine="true" android:layout_centerVertical="true" android:layout_marginEnd="5.0dip" />
        <CheckBox android:id="@id/select_all_check" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="5.0dip" />
    </LinearLayout>
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:fastScrollEnabled="true" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/ButtonBar">
        <Button android:id="@id/btn_ok" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/yes" android:layout_weight="1.0" />
        <Button android:id="@id/btn_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/no" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>