<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.ImageAttachmentView android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/image_attachment_view" android:background="@drawable/attachment_editor_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingEnd="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ImageView android:id="@id/image_content" android:layout_width="fill_parent" android:layout_height="135.0dip" />
        <TextView android:textColor="@android:color/white" android:layout_gravity="end|center|top" android:id="@id/mms_size_indicator" android:background="@android:color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:alpha="0.5" />
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="8.0dip">
        <Button android:textColor="@android:color/black" android:id="@id/view_image_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/view" style="?android:attr/buttonStyleSmall" />
        <Button android:textColor="@android:color/black" android:id="@id/replace_image_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/replace" style="?android:attr/buttonStyleSmall" />
        <Button android:textColor="@android:color/black" android:id="@id/remove_image_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/remove" style="?android:attr/buttonStyleSmall" />
    </LinearLayout>
</com.android.mms.ui.ImageAttachmentView>